--- a/css/style.css
+++ b/css/style.css
@@ -233,11 +233,6 @@ body {
     line-height: 17px;
     font-weight: 700;
     font-style: normal;
-    /*
-          font-size: 14px;
-          line-height: 17px;
-          font-weight: 700;
-          */
     text-transform: uppercase;
     margin-bottom: 24px;
 }
@@ -623,10 +618,154 @@ body {
     margin-top: 16px;
 }
 
+.registration__wrp {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 64px;
+    margin-bottom: 96px;
+}
+
+.registration__form {
+    max-width: 360px;
+}
+
+.registration__form-title {
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: 300;
+    font-style: normal;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #222222;
+    text-transform: capitalize;
+}
+
+.registration__form-input {
+    width: 100%;
+    height: 45px;
+    font-size: 13px;
+    line-height: 16px;
+    font-weight: 300;
+    font-style: normal;
+    text-align: left;
+    margin-top: 21px;
+    box-sizing: border-box;
+    border: 1px solid #A4A4A4;
+}
+
+.registration__form-input:hover {
+    outline: 1px solid #ffe08c;
+}
+
+.registration__form-input:focus {
+    outline: 1px solid red;
+}
+
+.registration__form-input::placeholder {
+    color: #B1B1B1;
+}
+
+.registration__form-group-radio {
+    display: flex;
+    align-items: center;
+    margin: 33px 0 33px 0;
+}
+
+.registration [type="radio"] {
+    margin: 0;
+}
+
+.registration__form-span {
+    display: inline-block;
+    font-size: 11px;
+    line-height: 14px;
+    font-weight: 300;
+    font-style: normal;
+    text-align: left;
+    margin: 0px 20px 0px 10px;
+}
+
+.registration__form-text {
+    font-size: 13px;
+    line-height: 16px;
+    font-weight: 300;
+    font-style: normal;
+    text-align: left;
+    color: #B1B1B1;
+    margin-top: 16px;
+}
+
+.registration__form-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    width: 167px;
+    height: 50px;
+    background-color: #F26376;
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: 400;
+    font-style: normal;
+    text-align: left;
+    color: #FFFFFF;
+    margin-top: 40px;
+}
+
+.registration__form-button > svg {
+    width: 17px;
+    margin-left: 20px;
+}
+
+.registration__form-button:hover, .registration__form-button:focus {
+    background: #FF6A6A;
+    color: #FFFFFF;
+}
+
+.registration__form-button:active {
+    opacity: 0.5;
+}
+
+.registration__info {
+    max-width: 650px;
+    margin-left: 12px;
+}
+
+.registration__info-header {
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 300;
+    font-style: normal;
+    text-align: left;
+    text-transform: uppercase;
+}
+
+.registration__info-list {
+    margin-left: 43px;
+    margin-top: 21px;
+}
+
+.registration__info-item {
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 300;
+    font-style: normal;
+    text-align: left;
+    margin-bottom: 16px;
+    position: relative;
+}
+
 .basement {
     background-image: url(../img/fon.png);
     background-repeat: no-repeat;
     background-position: center;
+}
+
+.registration__info-item-img {
+    position: absolute;
+    top: 7px;
+    left: -43px;
 }
 
 .basement__wpr {
