--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,12 @@ body {
   margin: 0 auto;
 }
 
+@media (max-width: 767px) {
+  .conteiner {
+    padding: 0;
+  }
+}
+
 .all-wrapper {
   max-width: 1600px;
   margin: 0 auto;
@@ -177,6 +183,12 @@ body {
 .header__container {
   display: flex;
   margin-left: 32px;
+}
+
+@media (max-width: 600px) {
+  .header__conteiner {
+    margin-left: 16px;
+  }
 }
 
 .header__search {
@@ -220,6 +232,12 @@ body {
   color: #FFFFFF;
 }
 
+@media (max-width: 600px) {
+  .header__search-input {
+    width: 100%;
+  }
+}
+
 .header__search-input:hover {
   outline: 1px solid #ffe08c;
 }
@@ -232,6 +250,13 @@ body {
   display: flex;
   align-items: center;
   margin-right: 32px;
+}
+
+@media (max-width: 600px) {
+  .header__manu-list {
+    margin-right: 16px;
+    margin-left: 16px;
+  }
 }
 
 .header__burger {
@@ -259,6 +284,12 @@ body {
 
 .header__link {
   margin: 0 0 0 33px;
+}
+
+@media (max-width: 600px) {
+  .header__link {
+    display: none;
+  }
 }
 
 .header__person-icon {
@@ -573,6 +604,18 @@ body {
   margin-top: 65px;
 }
 
+@media (max-width: 1023px) {
+  .sales {
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 767px) {
+  .sales {
+    margin-top: 64px;
+  }
+}
+
 .sales__list {
   display: flex;
   flex-direction: column;
@@ -584,6 +627,13 @@ body {
   flex-grow: 1;
 }
 
+@media (max-width: 767px) {
+  .sales__list-wpr {
+    flex-direction: column;
+    margin: 0 auto;
+  }
+}
+
 .sales__item {
   position: relative;
   width: 31%;
@@ -591,8 +641,23 @@ body {
   background-color: #4E4544;
 }
 
+@media (max-width: 767px) {
+  .sales__item {
+    width: 360px;
+    height: 260px;
+    margin-bottom: 32px;
+  }
+}
+
 .sales__item-img {
   width: 100%;
+}
+
+@media (max-width: 767px) {
+  .sales__item-img {
+    width: 360px;
+    height: 260px;
+  }
 }
 
 .sales__item-box {
@@ -635,8 +700,23 @@ body {
   margin-top: 30px;
 }
 
+@media (max-width: 767px) {
+  .sales__item--shoes {
+    margin-top: 0;
+    width: 360px;
+    height: 111px;
+  }
+}
+
 .sales__item-img--shoes {
   width: 100%;
+}
+
+@media (max-width: 767px) {
+  .sales__item-img--shoes {
+    height: 111px;
+    object-fit: cover;
+  }
 }
 
 .brand {
@@ -648,6 +728,12 @@ body {
 
 .brand .brand__img {
   width: 50%;
+}
+
+@media (max-width: 767px) {
+  .brand .brand__img {
+    display: none;
+  }
 }
 
 .brand .brand__title-wrp {
@@ -668,6 +754,25 @@ body {
   position: relative;
 }
 
+@media (max-width: 1023px) {
+  .brand .brand__title {
+    font-size: 44px;
+    line-height: 52px;
+    font-weight: 900;
+    font-style: normal;
+    margin-left: 80px;
+  }
+}
+
+@media (max-width: 767px) {
+  .brand .brand__title {
+    font-size: 38px;
+    line-height: 46px;
+    font-weight: 900;
+    font-style: normal;
+  }
+}
+
 .brand .brand__title:before {
   content: '';
   width: 12px;
@@ -678,11 +783,35 @@ body {
   background-image: url(../img/rectangle.svg);
 }
 
+@media (max-width: 1023px) {
+  .brand .brand__title:before {
+    height: 78px;
+  }
+}
+
 .brand .brand__title-lower {
   font-size: 32px;
   font-weight: 700;
   line-height: 38px;
   display: block;
+}
+
+@media (max-width: 1023px) {
+  .brand .brand__title-lower {
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: 900;
+    font-style: normal;
+  }
+}
+
+@media (max-width: 767px) {
+  .brand .brand__title-lower {
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 900;
+    font-style: normal;
+  }
 }
 
 .brand .brand__title-pink {
@@ -694,6 +823,21 @@ body {
   justify-content: space-between;
   margin-top: 64px;
   margin-bottom: 96px;
+}
+
+@media (max-width: 1023px) {
+  .registration__wrp {
+    margin-top: 40px;
+    justify-content: space-evenly;
+  }
+}
+
+@media (max-width: 767px) {
+  .registration__wrp {
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+  }
 }
 
 .registration__form {
@@ -803,6 +947,13 @@ body {
   margin-left: 12px;
 }
 
+@media (max-width: 1023px) {
+  .registration__info {
+    max-width: 360px;
+    margin-top: 40px;
+  }
+}
+
 .registration__info-header {
   font-size: 24px;
   line-height: 29px;
@@ -810,6 +961,33 @@ body {
   font-style: normal;
   text-align: left;
   text-transform: uppercase;
+}
+
+@media (max-width: 1023px) {
+  .registration__info-header {
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: 300;
+    font-style: normal;
+  }
+}
+
+.registration__info-text {
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 300;
+  font-style: normal;
+  text-align: left;
+  margin-top: 22px;
+}
+
+@media (max-width: 1023px) {
+  .registration__info-text {
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: 300;
+    font-style: normal;
+  }
 }
 
 .registration__info-list {
@@ -825,6 +1003,15 @@ body {
   text-align: left;
   margin-bottom: 16px;
   position: relative;
+}
+
+@media (max-width: 1023px) {
+  .registration__info-item {
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: 300;
+    font-style: normal;
+  }
 }
 
 .registration__info-item-img {
@@ -849,8 +1036,21 @@ body {
   align-items: center;
 }
 
+@media (max-width: 768px) {
+  .advantages__list {
+    flex-direction: column;
+    padding-bottom: 64px;
+  }
+}
+
 .advantages__item {
   width: 360px;
+}
+
+@media (max-width: 768px) {
+  .advantages__item {
+    margin-top: 48px;
+  }
 }
 
 .advantages__item-img {
@@ -891,9 +1091,25 @@ body {
   background-position: center;
 }
 
+@media (max-width: 1023px) {
+  .basement {
+    background-size: auto 693px;
+    background-position: -415px 0px;
+  }
+}
+
 .basement__wpr {
   display: flex;
   justify-content: space-between;
+}
+
+@media (max-width: 1023px) {
+  .basement__wpr {
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    min-height: 614px;
+  }
 }
 
 .basement__wrapper {
@@ -902,6 +1118,12 @@ body {
   max-width: 360px;
   min-height: 448px;
   justify-content: center;
+}
+
+@media (max-width: 1023px) {
+  .basement__wrapper {
+    min-height: 100px;
+  }
 }
 
 .basement__wrapper-img {
@@ -935,6 +1157,12 @@ body {
   color: #222224;
 }
 
+@media (max-width: 1023px) {
+  .basement__wrapper-title {
+    margin-top: 48px;
+  }
+}
+
 .basement__wrapper-sub-title {
   font-size: 18px;
   line-height: 30px;
@@ -942,7 +1170,7 @@ body {
   font-style: normal;
   text-align: center;
   text-transform: uppercase;
-  color: #222224;
+  color: #222222;
 }
 
 .basement__wrapper-form {
@@ -1009,6 +1237,12 @@ body {
   align-items: center;
 }
 
+@media (max-width: 767px) {
+  .down-footer__wpr {
+    flex-direction: column-reverse;
+  }
+}
+
 .down-footer__copy {
   font-size: 16px;
   line-height: 19px;
@@ -1018,10 +1252,24 @@ body {
   color: #FFFFFF;
 }
 
+@media (max-width: 767px) {
+  .down-footer__copy {
+    margin-top: 40px;
+    margin-bottom: 9px;
+  }
+}
+
 .down-footer__list {
   display: flex;
   min-height: 79px;
   align-items: center;
+}
+
+@media (max-width: 767px) {
+  .down-footer__list {
+    min-height: auto;
+    margin-top: 43px;
+  }
 }
 
 .down-footer__item {
@@ -1065,6 +1313,12 @@ body {
   justify-content: space-between;
 }
 
+@media (max-width: 767px) {
+  .sub-header__conteiner {
+    padding: 0;
+  }
+}
+
 .sub-header__title {
   display: flex;
   align-items: center;
@@ -1076,6 +1330,12 @@ body {
   text-align: left;
   color: #F16D7F;
   text-transform: uppercase;
+}
+
+@media (max-width: 767px) {
+  .sub-header__title {
+    justify-content: center;
+  }
 }
 
 .sub-header__list {
