--- a/scss/blocks/_advantages.scss
+++ b/scss/blocks/_advantages.scss
@@ -14,8 +14,21 @@
     align-items: center;
 }
 
+@media (max-width: 768px) {
+    .advantages__list {
+        flex-direction: column;
+        padding-bottom: 64px;
+    }
+}
+
 .advantages__item {
     width: 360px;
+}
+
+@media (max-width: 768px) {
+    .advantages__item {
+        margin-top: 48px;
+    }
 }
 
 .advantages__item-img {
