--- a/scss/blocks/_registration.scss
+++ b/scss/blocks/_registration.scss
@@ -5,6 +5,21 @@
     margin-bottom: 96px;
 }
 
+@media (max-width: 1023px) {
+    .registration__wrp {
+        margin-top: 40px;
+        justify-content: space-evenly;
+    }
+}
+
+@media (max-width: 767px) {
+    .registration__wrp {
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
+    }
+}
+
 .registration__form {
     max-width: 360px;
 }
@@ -112,6 +127,13 @@
     margin-left: 12px;
 }
 
+@media (max-width: 1023px) {
+    .registration__info {
+        max-width: 360px;
+        margin-top: 40px;
+    }
+}
+
 .registration__info-header {
     font-size: 24px;
     line-height: 29px;
@@ -119,6 +141,33 @@
     font-style: normal;
     text-align: left;
     text-transform: uppercase;
+}
+
+@media (max-width: 1023px) {
+    .registration__info-header {
+        font-size: 16px;
+        line-height: 19px;
+        font-weight: 300;
+        font-style: normal;
+    }
+}
+
+.registration__info-text {
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 300;
+    font-style: normal;
+    text-align: left;
+    margin-top: 22px;
+}
+
+@media (max-width: 1023px) {
+    .registration__info-text {
+        font-size: 16px;
+        line-height: 19px;
+        font-weight: 300;
+        font-style: normal;
+    }
 }
 
 .registration__info-list {
@@ -134,6 +183,15 @@
     text-align: left;
     margin-bottom: 16px;
     position: relative;
+}
+
+@media (max-width: 1023px) {
+    .registration__info-item {
+        font-size: 16px;
+        line-height: 19px;
+        font-weight: 300;
+        font-style: normal;
+    }
 }
 
 .registration__info-item-img {
