--- a/scss/blocks/_sab-header.scss
+++ b/scss/blocks/_sab-header.scss
@@ -11,6 +11,12 @@
     justify-content: space-between;
 }
 
+@media (max-width: 767px) {
+    .sub-header__conteiner {
+        padding: 0;
+    }
+}
+
 .sub-header__title {
     display: flex;
     align-items: center;
@@ -22,6 +28,12 @@
     text-align: left;
     color: #F16D7F;
     text-transform: uppercase;
+}
+
+@media (max-width: 767px) {
+    .sub-header__title {
+        justify-content: center;
+    }
 }
 
 .sub-header__list {
