--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,4 @@
+@import 'fonts';
 @import './variables';
 @import './blocks/mixins';
 @import './reset';
@@ -13,3 +14,5 @@
 @import './blocks/basement';
 @import './blocks/down-footer';
 @import './blocks/sab-header';
+@import './blocks/purchase';
+@import './blocks/carousel';
