--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
-@import 'fonts';
+@import './animations';
+@import './fonts';
 @import './variables';
 @import './blocks/mixins';
 @import './reset';
@@ -16,3 +17,4 @@
 @import './blocks/sab-header';
 @import './blocks/purchase';
 @import './blocks/carousel';
+@import './blocks/cart';
